# sysml-style

./: .gitignore  README.md  pyproject.toml
sysml_style/: __main__.py  checker.py  config.py  formatter.py  rules.py
tests/: conftest.py  test_cli.py  test_idioms.py  test_naming.py  test_structure.py  test_whitespace.py
